[tool.poetry]
name = "anon-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">3.7.0,<3.7.1 || >3.7.1,<4.0"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
aiohttp = "^3.8.1"
gql = "^3.0.0"
requests = "^2.27.1"
web3 = "^5.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:start"
